[flake8]
max-arguments = 9
ignore = 
    WPS110, WPS112, WPS115, WPS125, WPS201, WPS210, WPS214, WPS215, WPS230, WPS237, WPS300, WPS305, WPS306, WPS351, WPS420, WPS425, WPS463, WPS602, WPS615,
    C812,
    I003,
    D100, D107,
    N400

per-file-ignores = 
    tests/**/test*.py: D101, D102, D104, S101, WPS118, WPS235, WPS318, WPS319, WPS442, WPS431, WPS612, I001
    tests/**/*dummy.py: D101, D102, D104, S101, WPS235, WPS318, WPS319, WPS442, WPS431, WPS612, I001

exclude =
    **/**/__init__.py
    **/__init__.py

[metadata]
license_file = LICENSE