[flake8]
max-arguments = 9
ignore = 
    WPS110, WPS112, WPS115, WPS125, WPS201, WPS210, WPS211, WPS214, WPS215, WPS235, WPS229, WPS230, WPS237, WPS300, WPS305, WPS306, WPS351, WPS420, WPS425, WPS463, WPS602, WPS615,
    C812, C815, C816,
    E731,
    I003,
    D100, D107,
    N400,
    W504



per-file-ignores = 
    **/test*.py: D101, D102, D104, S101, WPS118, WPS235, WPS318, WPS319, WPS442, WPS431, WPS612, I001, WPS226, S105
    **/*dummy.py: D101, D102, D104, S101, WPS235, WPS318, WPS319, WPS442, WPS431, WPS612, I001, I005
    **/client.py: WPS318, WPS319

exclude =
    **/**/__init__.py
    **/__init__.py

[metadata]
license_file = LICENSE