[flake8]
max-arguments = 9
ignore = 
    WPS110, WPS112, WPS115, WPS125, 
    WPS201, WPS202, WPS210, WPS211, WPS214, WPS215, WPS235, WPS229, WPS230, WPS237, 
    WPS300, WPS305, WPS306, WPS318, WPS319, WPS348, WPS351, 
    WPS402, WPS420, WPS425, WPS463, 
    WPS510, 
    WPS601, WPS602, WPS615,
    C812, C815, C816,
    E731,
    I003,
    D100, D107,
    N400,
    W504



per-file-ignores = 
    **/client_builder.py: D102
    tests/**: D101, D102, D104, S101, WPS118, WPS235, WPS442, WPS431, WPS612, I001, WPS226, S105, WPS204, I005
    **/calculator.py: WPS348, WPS506, WPS421, D103
    **/extension_base.py: E800

exclude =
    **/**/__init__.py
    **/__init__.py

[metadata]
license_file = LICENSE